--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   flutter_native_splash: ^2.4.6
+  flutter_otp_text_field: ^1.1.0+2
 
 dev_dependencies:
   flutter_test:
